[package]
name = "sulk-parse"
description = "Solidity lexer and parser"
homepage = "https://github.com/danipopes/sulk/blob/master/crates/parse"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
sulk-ast.workspace = true
sulk-data-structures.workspace = true
sulk-interface.workspace = true

alloy-primitives.workspace = true
bitflags.workspace = true
hex.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
num-rational.workspace = true

[dev-dependencies]
expect-test.workspace = true

[features]
nightly = ["sulk-ast/nightly", "sulk-interface/nightly"]
