[package]
name = "solar-parse"
description = "Solidity lexer and parser"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/parse"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true

[dependencies]
solar-ast.workspace = true
solar-data-structures.workspace = true
solar-interface.workspace = true

alloy-primitives.workspace = true
bitflags.workspace = true
bumpalo.workspace = true
itertools.workspace = true
memchr.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true
smallvec.workspace = true
tracing.workspace = true

[dev-dependencies]
expect-test.workspace = true

[features]
nightly = ["solar-ast/nightly", "solar-interface/nightly"]
