[package]
name = "rsolc-parser"
version = "0.0.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "Solidity parser"
homepage = "https://github.com/danipopes/rsolc/blob/master/crates/parser"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
unicode-ident = "1.0"

[dev-dependencies]
expect-test = "1.4"
