[package]
name = "rsolc-parser"
description = "Solidity parser"
homepage = "https://github.com/danipopes/rsolc/blob/master/crates/parser"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rsolc-ast.workspace = true
rsolc-span.workspace = true

unicode-ident.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
expect-test.workspace = true

[features]
nightly = ["rsolc-ast/nightly", "rsolc-span/nightly"]
