[package]
name = "sulk-parser"
description = "Solidity parser"
homepage = "https://github.com/danipopes/sulk/blob/master/crates/parser"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sulk-ast.workspace = true
sulk-interface.workspace = true

hex.workspace = true
unicode-ident.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
expect-test.workspace = true

[features]
nightly = ["sulk-ast/nightly", "sulk-interface/nightly"]
