[package]
name = "rsolc"
version = "0.0.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "Rust Solidity compiler"
homepage = "https://github.com/danipopes/rsolc"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# rsolc-parser = { path = "../parser" }
