[package]
name = "sulk-sema"
description = "Semantic analysis"
homepage = "https://github.com/paradigmxyz/sulk/tree/main/crates/config"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
sulk-ast.workspace = true
sulk-data-structures.workspace = true
sulk-interface.workspace = true
sulk-parse.workspace = true

bumpalo.workspace = true
# itertools.workspace = true
paste.workspace = true
# petgraph.workspace = true
rayon.workspace = true
tracing.workspace = true
thread_local = "1.1"
typed-arena.workspace = true

[features]
nightly = [
    "sulk-ast/nightly",
    "sulk-data-structures/nightly",
    "sulk-interface/nightly",
    "sulk-parse/nightly",
    "thread_local/nightly",
]
