[package]
name = "solar-sema"
description = "Semantic analysis"
homepage = "https://github.com/paradigmxyz/solar/tree/main/crates/config"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
solar-ast.workspace = true
solar-data-structures.workspace = true
solar-interface.workspace = true
solar-parse.workspace = true

alloy-primitives.workspace = true
bitflags.workspace = true
bumpalo.workspace = true
derive_more.workspace = true
once_map.workspace = true
paste.workspace = true
rayon.workspace = true
scc.workspace = true
thread_local.workspace = true
tracing.workspace = true
typed-arena.workspace = true

[features]
nightly = [
    "solar-ast/nightly",
    "solar-data-structures/nightly",
    "solar-interface/nightly",
    "solar-parse/nightly",
    "thread_local/nightly",
]
