[package]
name = "solar-compiler"
description = "Blazingly fast Solidity compiler"
homepage = "https://github.com/paradigmxyz/solar/"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/v{version}/solar-{target}{archive-suffix}"
bin-dir = "solar-{target}/{bin}{binary-ext}"

[lints]
workspace = true

[lib]
name = "solar"
path = "./src/lib.rs"

[[bin]]
name = "solar"
path = "./src/main.rs"
required-features = ["cli"]

[[test]]
name = "tests"
path = "./tests.rs"
harness = false

[dependencies]
solar-ast.workspace = true
solar-config.workspace = true
solar-data-structures.workspace = true
solar-interface.workspace = true
solar-macros.workspace = true
solar-parse.workspace = true
solar-sema.workspace = true

solar-cli = { workspace = true, optional = true }

alloy-primitives.workspace = true

[dev-dependencies]
solar-tester.workspace = true

[features]
default = ["cli", "solar-cli?/default"]
# Enable the CLI and binary.
cli = ["dep:solar-cli"]
# Nightly-only features for faster/smaller builds.
nightly = [
    "solar-cli?/nightly",
    "solar-ast/nightly",
    "solar-config/nightly",
    "solar-interface/nightly",
    "solar-parse/nightly",
    "solar-sema/nightly",
    "solar-tester/nightly",
]
# Faster but less portable algorithm implementations, such as Keccak-256.
asm = ["solar-cli?/asm", "alloy-primitives/asm-keccak"]
# Faster but less portable allocator.
jemalloc = ["solar-cli?/jemalloc"]
mimalloc = ["solar-cli?/mimalloc"]

# Debugging and profiling.
tracing = ["solar-cli?/tracing"]
tracing-off = ["solar-cli?/tracing-off"]
tracing-chrome = ["tracing", "solar-cli?/tracing-chrome"]
tracy = ["tracing", "solar-cli?/tracy"]
tracy-allocator = ["tracing", "solar-cli?/tracy-allocator"]
