[package]
name = "rsolc-span"
version = "0.0.0"
authors = ["DaniPopes <57450786+DaniPopes@users.noreply.github.com>"]
description = "RSolc source positions and related helper functions"
homepage = "https://github.com/danipopes/rsolc/blob/master/crates/ast"

edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rsolc-data-structures = { path = "../data-structures" }
rsolc-macros = { path = "../macros" }

scoped-tls = "1.0"
