[package]
name = "rsolc-span"
description = "RSolc source positions and related helper functions"
homepage = "https://github.com/danipopes/rsolc/blob/master/crates/span"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rsolc-data-structures.workspace = true
rsolc-macros.workspace = true

bumpalo.workspace = true
scoped-tls.workspace = true

[features]
nightly = ["rsolc-data-structures/nightly", "rsolc-macros/nightly"]
