[package]
name = "sulk"
description = "Solidity compiler"
homepage = "https://github.com/paradigmxyz/sulk/"

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[build-dependencies]
vergen = { workspace = true, features = ["build", "git", "gitcl"] }

[dependencies]
sulk-config = { workspace = true, features = ["clap"] }
sulk-data-structures.workspace = true
sulk-interface = { workspace = true, features = ["json"] }
sulk-sema.workspace = true

clap = { workspace = true, features = ["derive"] }
rayon.workspace = true
tracing-subscriber = { workspace = true, features = ["registry", "env-filter"] }

tracing-tracy = { version = "0.11", optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

tikv-jemallocator = { workspace = true, optional = true }

[dev-dependencies]
sulk-tester.workspace = true

[features]
default = ["jemalloc"]
nightly = [
    "sulk-config/nightly",
    "sulk-data-structures/nightly",
    "sulk-interface/nightly",
    "sulk-sema/nightly",
    "sulk-tester/nightly",
]
jemalloc = ["dep:tikv-jemallocator"]
tracy = ["dep:tracing-tracy"]

[[test]]
name = "tests"
path = "./tests.rs"
harness = false
