[package]
name = "solar-foundry-tester"
description = "Foundry-based integration tests comparing Solar codegen against solc"
homepage = "https://github.com/paradigmxyz/solar/tree/main/tools/foundry-tester"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dev-dependencies]
serde_json.workspace = true
