[package]
name = "solar-mir-opt"
description = "Run individual MIR optimization passes on Solidity contracts"
homepage = "https://github.com/paradigmxyz/solar/tree/main/tools/solar-mir-opt"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "solar-mir-opt"
path = "src/main.rs"

[dependencies]
solar-codegen.workspace = true
solar-interface.workspace = true
solar-sema.workspace = true
