[package]
name = "sulk-tester"
description = "Sulk test runner"
homepage = "https://github.com/paradigmxyz/sulk/tree/main/tools/tester"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
assert_cmd.workspace = true
diff.workspace = true
once_cell.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
tester.workspace = true
unified-diff.workspace = true
walkdir.workspace = true

[features]
nightly = []
