[package]
name = "solar-tester"
description = "Solar test runner"
homepage = "https://github.com/paradigmxyz/solar/tree/main/tools/tester"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
alloy-dyn-abi.workspace = true
alloy-json-abi.workspace = true
alloy-primitives.workspace = true
evm2.workspace = true
regex.workspace = true
serde_json.workspace = true
tempfile.workspace = true
ui_test = { git = "https://github.com/DaniPopes/ui_test", branch = "fork", version = "0.30.5" }

[features]
nightly = []
