[package]
name = "xtask"
description = "Auxiliary build tool"
homepage = "https://github.com/paradigmxyz/sulk/tree/main/tools/xtask"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
xflags = "0.3"
xshell = "0.2"
